test: change annotation value