@@ -1,4 +1,9 @@
 plugins {
-   id("java-conventions")
+    id("java-conventions")
 }
 
+tasks.named<Test>("test") {
+    jvmArgs(
+        "--add-opens", "java.base/sun.reflect.annotation=ALL-UNNAMED",
+    )
+}
